# TemplateMessenger

./: CMakeLists.txt  LICENSE
ConsoleTestApp/: CMakeLists.txt  Messages.hpp  StdErrMessageHandler.hpp  StdOutMessageHandler.hpp  main.cpp
TemplatedMessenger/: CMakeLists.txt  Messenger.hpp  Recipient.hpp
